# c2pa-conformance-suite

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_vectors.py  sync_predicates.sh
src/c2pa_conformance/: cli.py
src/c2pa_conformance/binding/: bmff_hash.py  bmff_parser.py  boxes_hash.py  collection_hash.py  data_hash.py  text_hash.py
src/c2pa_conformance/builder/: cose_signer.py  jumbf_builder.py  manifest_builder.py  two_pass.py
src/c2pa_conformance/compare/: diff.py  normalizer.py  report.py  runner.py
src/c2pa_conformance/crypto/: cose.py  hashing.py  ocsp.py  pki.py  timestamp.py  trust.py  verifier.py  x509_chain.py
src/c2pa_conformance/data/: c2pa_trust_list.pem  predicates.json
src/c2pa_conformance/embedders/: __init__.py  jpeg.py  png.py  sidecar.py
src/c2pa_conformance/evaluator/: engine.py
src/c2pa_conformance/extractors/: __init__.py  base.py  bmff.py  flac.py  font.py  gif.py  html.py  id3.py  (+10 more)
tests/: test_binding_bmff.py  test_binding_collection.py  test_builder.py  test_cli_commands.py  test_compare.py  test_cose.py  test_crjson_rubric.py  test_crypto_integration.py  test_embedders.py  test_engine_may.py  test_evaluator.py  test_extractors.py  test_extractors_extended.py  test_hashing.py  test_ingredient.py  test_integration.py  test_integration_c2patool.py  test_jumbf_parser.py  test_kg_integration.py  test_multi_manifest.py  test_ocsp_timestamp.py  test_operators.py  test_operators_advanced.py  test_pki.py  test_two_pass.py  test_vectors.py  test_x509_chain.py
(+10 files in other folders)
